--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "predis/predis": "0.8.*"
+        "predis/predis": "^1.1"
     },
     "extra": {
         "branch-alias": {
