--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "vlucas/phpdotenv": "^2.4"
     },
     "extra": {
         "branch-alias": {
